<resources>
    <string name="app_name">Sistema Gestión de Pedidos</string>
    <string name="button">Button</string>
    <string name="prueba">Prueba</string>
    <string name="textview">TextView</string>
    <string name="logoLogin">Logo</string>
    <string name="txtPassword">Contraseña</string>
    <string name="btnIngresar">Iniciar Sesion</string>
    <string name="chkMostrarConstraseña">Mostrar Contraseña</string>
    <string name="bienvenido">Bienvenido:  </string>
    <string name="usuario">Usuario</string>
    <string name="producto">Producto</string>
    <string name="cliente">Cliente</string>
    <string name="pedido">Pedido</string>
    <string name="acerca_de">Acerca de</string>
    <string name="home">Home</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="id">ID</string>
    <string name="cuit">CUIT</string>
    <string name="nombre">NOMBRE</string>
    <string name="domicilio">DOMICILIO</string>
    <string name="listado_de_cliente">LISTADO DE CLIENTE</string>
    <string name="title_activity_menu_administrador2">menu_administrador2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
